# dolphin_slam

./: .gitignore  CMakeLists.txt  README.md  package.xml
bof_vocabularies/: vocabulary_s100_g100.xml  vocabulary_s100_g1000.xml  vocabulary_s100_g1500.xml  vocabulary_s100_g500.xml
bof_vocabularies/sorted/: vocabulary_s100_g100.xml  vocabulary_s100_g1000.xml  vocabulary_s100_g1500.xml  vocabulary_s100_g500.xml
bow_vocabularies/: _s100_g100.xml  vocabulary_s1000_g100.xml  vocabulary_s1000_g1000.xml  vocabulary_s1000_g250.xml  vocabulary_s1000_g500.xml  vocabulary_s1000_g750.xml  vocabulary_s100_g100.xml  vocabulary_s100_g1000.xml  vocabulary_s100_g250.xml  vocabulary_s100_g500.xml  vocabulary_s100_g750.xml  vocabulary_s200_g100.xml  vocabulary_s250_g100.xml  vocabulary_s250_g1000.xml  vocabulary_s250_g250.xml  vocabulary_s250_g500.xml  vocabulary_s250_g750.xml  vocabulary_s300_g100.xml  vocabulary_s400_g100.xml  vocabulary_s500_g100.xml  vocabulary_s500_g1000.xml  vocabulary_s500_g250.xml  vocabulary_s500_g500.xml  vocabulary_s500_g750.xml  vocabulary_s600_g100.xml  vocabulary_s700_g100.xml  vocabulary_s750_g100.xml  vocabulary_s750_g1000.xml  vocabulary_s750_g250.xml  vocabulary_s750_g500.xml  vocabulary_s750_g750.xml  vocabulary_s800_g100.xml
config/: ResumoTestes.txt  bof_training.yaml  bow_training.yaml  custom_rosconsole.conf  experience_map.rviz  experience_map.yaml  fabmap_pool_loop.moos  fabmap_training.yaml  fabmap_uwsim.moos  fabmap_yatch.moos  frames.gv  image_processing.yaml  local_view_cells.yaml  place_cells.yaml  pose_cell.rviz  robot_state.config  robot_state.rviz  robot_state.yaml
include/: bow_training.h
include/dolphin_slam/: bag_of_features.h  bow_descriptor_extractor.h  bow_training.h  color.h  experience_map.h  experience_map_types.h  fabmap_training.h  image_processing.h  local_view_module.h  local_view_template.h  place_cell_network.h  robot_state.h  utils.h
launch/: bof_training.launch  bow_training.launch  bow_training_pool.launch  bow_training_pool_loop.launch  bow_training_uwsim.launch  bow_training_yatch.launch  dolphin_slam.launch  dolphin_slam_pool.launch  dolphin_slam_pool_loop.launch  dolphin_slam_uwsim.launch  dolphin_slam_yatch.launch  fabmap_training.launch  fabmap_training_pool.launch  fabmap_training_pool_loop.launch  fabmap_training_uwsim.launch  fabmap_training_yatch.launch  image_processing.launch  local_view_cells.launch  local_view_cells_pool.launch  local_view_cells_uwsim.launch  robot_state.launch
msg/: ActiveLocalViewCells.msg  Descriptors.msg  Error.msg  ExecutionTime.msg  ExperienceEvent.msg  ImageHistogram.msg  LocaViewCell.txt  LocalViewCell.msg  LocalViewNetwork.msg  PlaceCellActivity.msg  ViewTemplate.msg
scripts/: bof_training.bash  create_bag_pool_loop.py  experience_map.m  plot_lv.m  test.eps
src/: bof_training.cpp  bow_training_node.cpp  experience_map_node.cpp  fabmap_training_node.cpp  image_processing_node.cpp  local_view_node.cpp  place_cell_node.cpp  robot_state_node.cpp
src/dolphin_slam/: bag_of_features.cpp  bow_descriptor_extractor.cpp  bow_descriptor_extractor.cpp.autosave  bow_training.cpp  experience_map.cpp  experience_map.cpp.autosave  fabmap_training.cpp  image_processing.cpp  local_view_module.cpp  local_view_template.cpp  place_cell_network.cpp  robot_state.cpp  utils.cpp
srv/: ImageRequest.srv  RobotPose.srv
vocabularies/: bow_descriptors.xml  bow_vocabulary.xml  cltree.xml
